<resources>
    <string name="app_name">Movies</string>

    <!-- Error messages -->
    <string name="unsuccessful_response">Couldn\'t parse response</string>
    <string name="error_call">Error making a network call</string>
    <string name="no_trailer_error">No trailer available</string>

    <string name="title_activity_movie">MovieActivity</string>
    <string name="movie_toolbar_title">Movie</string>

    <string name="added_to_favorites">Added to favorites</string>
    <string name="undo">Undo</string>
    <string name="actors_title">Actors</string>
    <string name="rating_placeholder">%1$.1f/10</string>

    <!-- Categories -->
    <string name="popular">Popular</string>
    <string name="now_playing">Now playing</string>
    <string name="top_rated">Top rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorite">Favorite</string>

    <!-- Delete operation -->
    <string name="success_deleting_movie">Deleted the movie from database</string>
    <string name="failure_deleting_movie">Failed to delete the movie from database</string>

    <string name="empty_table_error">You didn\'t store any movie</string>
    <string name="no_fav_movies_title">No favorite movies saved</string>
    <string name="no_connection">No internet connection</string>

    <!-- Permissions -->
    <string name="permission_dialog_title">Permission is needed</string>
    <string name="permission_dialog_message">Please grant the storage permission to be able to save the movie</string>
    <string name="permission_denied_message">Permission was denied</string>
    <string name="permission_layout_txt">Please grant storage permission to read from database</string>
    <string name="open_permission_screen">Open permission screen</string>
    <string name="overview">overview</string>
    <string name="trailers_and_teasers">Trailers and teasers</string>

</resources>
