<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_popular"
        android:title="@string/popular"
        android:checkable="true"
        android:icon="@drawable/ic_local_movies"/>

    <item android:id="@+id/action_now_playing"
        android:title="@string/now_playing"
        android:checkable="true"
        android:icon="@drawable/ic_local_movies"/>

    <item android:id="@+id/action_top_rated"
        android:title="@string/top_rated"
        android:checkable="true"
        android:icon="@drawable/ic_local_movies"/>

    <item android:id="@+id/action_upcoming"
        android:title="@string/upcoming"
        android:checkable="true"
        android:icon="@drawable/ic_local_movies" />

    <item android:id="@+id/action_favorite"
        android:title="@string/favorite"
        android:checkable="true"
        android:icon="@drawable/ic_local_movies" />

</menu>